# Harmonia

./: .gitignore  BUILD  Cargo.toml  Readme.md  WORKSPACE
agent/: BUILD  Cargo.toml
agent/src/architectura/: mod.rs
compositor/: BUILD  Cargo.toml
compositor/src/: build.rs
context/: BUILD  Cargo.toml
context/src/axiomia/: mod.rs
context/src/axiomia/models/stdmodel/relativity/: Cargo.toml
sys/: BUILD  Cargo.toml
