[package]
name = "harmonia-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "harmonia-client"
path = "main.rs"
required-features = ["default"]

[features]
default = ["environment", "integration", "extropia"]
environment = ["context", "backend"]
integration = ["runtime", "filemanager", "launcher", "settings"]
backend = ["accelerator", "compositor"]

[dependencies]
bindgen = "0.69.1"