[package]
name = "harmonia-context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]

#[features]
#default = ["topology", "realm"]
#topology = ["axiomia", "theoremia", "symmetria", "automaton"]
#realm = ["axiomia", "protoria", "reactoria"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]