[package]
name = "harmonia-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bindgen = "0.69.1"
libc = "0.2.151"
dlopen = "0.1.8"
once_cell = "1.19.0"
```